Added basic home page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-Hello World
+<!DOCTYPE html>
+<html class="sr">
+   <head>
+      <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+      <meta name="theme-color" content="#ffffff">
+      <title>Board Game Clock</title>
+      <link rel="stylesheet" media="screen" href="assets/public-67b2fa7293537e17fd97e55a789338bc4c0a05fcbc2c408ecc075.css">
+      <link rel="stylesheet" media="screen" href="assets/theme-font-sans-serif-12ef395bb8e1035bb88b4ffd0a335f5ae23467.css">
+   </head>
+   <body class="generated  flat sans-serif rounded loaded" style="height: 100%;">
+      <div id="app">
+         <div class="home-page">
+            <section class="hero has-screenshot justify-center landscape" style="background-color: #ffffff;">
+               <nav class="nav">
+                  <div class="container reveal" style="visibility: visible;">
+                     <div class="inner-container">
+                        <div class="columns">
+                           <div class="column pull-left"><a class="app-icon" href="https://apps.apple.com/gb/app/boardgameclock/id1513718622"><img class="app-icon image" src="assets/app_icon.jpg"><span class="name is-text-medium has-icon" style="">Board Game Clock</span></a></div>
+                           <div class="column pull-right"></div>
+                        </div>
+                     </div>
+                  </div>
+               </nav>
+                <div class="section-content">
+                  <div class="container">
+                     <div class="inner-container">
+                        <div class="columns content">
+                           <div class="column screenshots reveal false" style="visibility: visible;">
+                              <div class="screenshot iphone_xs_max black landscape">
+                              	<img class="screen iphone_xs_max " alt="App Screenshot" src="assets/2688x1242-1-Settings.png">
+                              	<img class="shell iphone_xs_max black" alt="Mobile Device Shell" src="assets/iphone_xs_max_black.png">
+                              </div>
+                           </div>
+                           <div class="column text-content reveal" style="visibility: visible;">
+                              <div class="titles">
+                                 <h1 class="is-text-large" style="color: #6003d1;">Board Game Clock</h1>
+                                 <h2 class="is-text-small" style="">Simple power-efficient countdown timer for board games.</h2>
+                                 <div class="action-area">
+                                    <div class="action-buttons">
+                                    	<a href="https://apps.apple.com/gb/app/boardgameclock/id1513718622">
+                                    		<img src="assets/Download_on_the_App_Store_Badge_US-UK_blk_092917.png">
+	                                    </a>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="section-content">
+                  <div class="container">
+                     <div class="inner-container">
+                        <div class="columns content">
+                           <div class="column screenshots reveal false" style="visibility: visible;">
+                              <div class="screenshot iphone_xs_max black landscape">
+                              	<img class="screen iphone_xs_max " alt="App Screenshot" src="assets/2688x1242-2-Timer.png">
+                              	<img class="shell iphone_xs_max black" alt="Mobile Device Shell" src="assets/iphone_xs_max_black.png">
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </section>
+            <section class="footer" style="">
+               <div class="container">
+                  <div class="inner-container">
+                     <a name="contact"></a>
+                     <div class="container has-text-centered reveal" style="visibility: visible;">
+                        <div class="copyright markdown" style="">© 2020 Solid End LTD</div>
+                        <div class="links"><a class="policy-privacy" href="https://www.solidend.com/privacy-policy.html" style="">Privacy Policy</a></div>
+                     </div>
+                  </div>
+               </div>
+            </section>
+         </div>
+      </div>
+   </body>
+</html>
