--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -439,15 +439,15 @@ pre[class*="language-"] {
 
 <h1 id="toc_0">Privacy Policy</h1>
 
-<p>Board Game Clock does not collect any personal data. All settings are stored locally on the device.</p>
+<p>Solid End apps do not collect any personal data. All settings are either stored locally on the device or on iCloud.</p>
 
 <h2 id="toc_1">Your Consent</h2>
 
-<p>By using Board Game Clock, you consent to our privacy policy.</p>
+<p>By using any Solid End app, you consent to our privacy policy.</p>
 
 <h2 id="toc_2">Changes to the Agreements</h2>
 
-<p>From time to time we may make changes to the policy for valid reasons, such as improving the existing features or adding new ones to the app. Please therefore make sure you read any such notice carefully. If you don&#39;t agree to our Terms of Service or any changes we make to this Agreement, we ask and advise that you do not use or continue to access the Board Game Clock app immediately.</p>
+<p>From time to time we may make changes to the policy for valid reasons, such as improving the existing features or adding new ones to the app. Please therefore make sure you read any such notice carefully. If you don&#39;t agree to our Terms of Service or any changes we make to this Agreement, we ask and advise that you do not use or continue to access the Solid End apps immediately.</p>
 
 
 
